--- a/opendog_bringup/CMakeLists.txt
+++ b/opendog_bringup/CMakeLists.txt
@@ -23,8 +23,22 @@ if(BUILD_TESTING)
   ament_lint_auto_find_test_dependencies()
 endif()
 
+find_package(rclcpp REQUIRED)
+find_package(std_msgs REQUIRED)
+
+add_executable(opendog_joint_ctrl_node src/opendog_joint_controller.cpp)
+ament_target_dependencies(opendog_joint_ctrl_node
+  rclcpp  
+  std_msgs 
+)
+
+install(TARGETS
+opendog_joint_ctrl_node  
+  DESTINATION lib/${PROJECT_NAME}
+) 
+
 install(
-  DIRECTORY launch config
+  DIRECTORY launch config src
   DESTINATION share/${PROJECT_NAME}
 )
 
